--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@ body{
   border-radius: 10px;
 }
 .input {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(245, 209, 209);
   border: 1px solid black;
   padding: 20px;
   font-size: 30px;
@@ -18,5 +18,7 @@ body{
 }
 
 input {
-  width: 125%;
+  width: 110%;
+  text-align: center;
 }
+
